*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,4 +1,7 @@
-<strong>MediaWiki has been installed.</strong>
+Take a look at [[NixOS_Wiki:About]]
+
+
+
 
 Consult the [https://meta.wikimedia.org/wiki/Help:Contents User's Guide] for information on using the wiki software.
 
