*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,6 +1,10 @@
 Take a look at [[NixOS_Wiki:About]]
 
 
+<strong>We are still in the process of setting up the wiki.</strong>
+
+Expect breaking changes until this message is removed.
+
 
 
 Consult the [https://meta.wikimedia.org/wiki/Help:Contents User's Guide] for information on using the wiki software.
