--- a/NixOS_on_ZFS.mw
+++ b/NixOS_on_ZFS.mw
@@ -1,5 +1,3 @@
-= copied from old wiki =
-
 NixOS has native support for ZFS.
 It uses the code from the [http://zfsonlinux.org/ ZFS on Linux project], including kernel modules and userspace utilities.
 
@@ -32,7 +30,7 @@ To activate the configuration and load the ZFS kernel module, run:
   modprobe zfs
 </pre>
 
-(Note that manually loading the ZFS kernel module is only necessary in the install environment).<ref>Todo: Verify if this is still the case with NixOS >= 17.03 <ref>
+(Note that manually loading the ZFS kernel module is only necessary in the install environment).<ref>Todo: Verify if this is still the case with NixOS >= 17.03 </ref>
 
 All ZFS functionality should now be available.
 
