*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -5,6 +5,10 @@ Take a look at [[NixOS_Wiki:About]]
 
 Expect breaking changes until this message is removed.
 
+== News ==
+* Login via GitHub has been enabled
+** We are still working out some kinks. If you encounter any errors please contact [[User:Fadenb]]
+
 
 
 
