--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -18,6 +18,7 @@ Expect breaking changes until this message is removed.
 * NixOS [http://nixos.org/nixos/manual/ manual]
 * Nixpkgs [http://nixos.org/nixpkgs/manual/ manual]
 * NixOps [http://hydra.nixos.org/job/nixops/master/tarball/latest/download-by-type/doc/manual manual]
+* NixOS [[Cheatsheet]]
 
 
 == Hosting Providers ==
