--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -13,13 +13,12 @@ Expect breaking changes until this message is removed.
 
 
 
-== Getting started ==
+== Getting started with Nix / NixOS ==
 * Nix [http://nixos.org/nix/manual/ manual]
 * NixOS [http://nixos.org/nixos/manual/ manual]
 * Nixpkgs [http://nixos.org/nixpkgs/manual/ manual]
 * NixOps [http://hydra.nixos.org/job/nixops/master/tarball/latest/download-by-type/doc/manual manual]
 * NixOS [[Cheatsheet]]
-
 
 == Hosting Providers ==
 * [[NixOS friendly hosters]]
