*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -30,3 +30,6 @@ Expect breaking changes until this message is removed.
 
 == Tutorials ==
 * [[NixOS on ZFS]]
+
+== All nixos.wiki Pages ==
+[[Special:AllPages]]
