*Empty MediaWiki Message*

--- a/Install_NixOS_on_Linode.mw
+++ b/Install_NixOS_on_Linode.mw
@@ -193,3 +193,5 @@ The last steps before booting the system is creating a configuration profile in 
 Change other configuration options to your preference.
 
 Here's is a sample configuration options:
+
+[[File:Linode_configuration_profile.png]]
