--- a/NixOS_friendly_hosters.mw
+++ b/NixOS_friendly_hosters.mw
@@ -8,5 +8,5 @@
 * [https://www.hetzner.de/ Hetzner] - NixOS ISO can be provided by the support. Just request them to make the ISO available via the support formular (provide a download link to the ISO)
 
 == Other means of installation ==
-* Linode - See [[Install NixOS on Linode]]
-* AWS EC2 - See [[NixOS on Amazon EC2]]
+* [https://www.linode.com Linode] - See [[Install NixOS on Linode]]
+* [https://aws.amazon.com/ec2/ AWS EC2] - See [[NixOS on Amazon EC2]]
