--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -6,13 +6,10 @@ Enabling Bluetooth is as simple as putting this in your configuration.nix:
 hardware.bluetooth.enable = true;
 </pre>
 
-== Bluez 4 ==
-
-This is the default for now (as of August 2013), as KDE 4.10 and Pulseaudio 4.0 do not yet support Bluez 5.
-
 == Bluez 5 ==
+<del>To use Bluez 5, you need something like this in your Nixpkgs config (in your <code>~/.nixpkgs/config.nix</code>):</del>
 
-To use Bluez 5, you need something like this in your Nixpkgs config (in your <code>~/.nixpkgs/config.nix</code>):
+Bluez5 is now the default version (as of 2017-06-30)
 
 <pre>
 pkgs : {
