--- a/Steam.mw
+++ b/Steam.mw
@@ -1,3 +1,4 @@
+{{outdated}}
 This page is intended to describe the current state of Steam under Nixos and to discuss what the problems are in packaging it and how we can approach solving them.
 
 == I want to play ==
