--- a/Slock.mw
+++ b/Slock.mw
@@ -1,6 +1,7 @@
 == Setup ==
 === cannot disable the out-of-memory killer for this process ===
-slock requires root for accessing passwords and protecting itself from OOM killing. To fix this error, add slock to your system packages and setuidPrograms by modifying your global configuration.nix like so:
+slock requires root for accessing passwords and protecting itself from OOM killing. To fix this error, add slock to your system packages and <del>setuidPrograms</del> security.wrappers by modifying your global configuration.nix like so :
 
- environment.systemPackages = with pkgs; [ slock ];
- security.setuidPrograms = [ "slock" ];
+ security.wrappers = {
+   slock.source = "${pkgs.slock}/bin/slock";
+ };
