*Empty MediaWiki Message*

--- a/Project_Discussion_&_Newsletters.mw
+++ b/Project_Discussion_&_Newsletters.mw
@@ -27,6 +27,8 @@ Several channels exist for NixOS project discussion. Please subscribe to those w
 * [https://compiletoi.net/this-week-in-nixos-3.html Week 2]
 * [https://compiletoi.net/this-week-in-nixos-3.html Week 1]
 
+=== NixOS Weekly ===
+http://weekly.nixos.org
 
 == Blogs & Social Networks ==
 
